# pyflatscrape

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
ebay/: ebay.py  main.py
ebay_scraper/: main.py
enums/: enums.py
immoscout/: immoscout.py
models/: basescraper.py  flat.py
